--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
   ],
   "require": {
     "php": ">=7.0",
-    "botman/botman": "~2.1"
+    "botman/botman": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0",
+    "phpunit/phpunit": "^8.0",
     "mockery/mockery": "dev-master",
     "ext-curl": "*"
   },
